# CodeSmithAI

./: .gitignore  docker-compose.yaml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  constants.py  main.py  models.py  schemas.py
backend/app/graph/: __init__.py  builder.py  nodes.py  state.py
backend/app/utils/: utils.py
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx  store.ts  types.ts
client/src/components/: BrandLogo.tsx  ChatHeader.tsx  ChatWindow.tsx  Composer.tsx  ConfirmModal.tsx  ConversationList.tsx  Markdown.tsx  MessageBubble.tsx  MessageList.tsx  ProtectedRoute.tsx  SettingsMenu.tsx  Sidebar.tsx  ThemeToggle.tsx  UserSelect.tsx
client/src/components/auth/: AuthLayout.tsx  TextField.tsx
client/src/data/: mockData.ts
client/src/pages/: ChatPage.tsx  LoginPage.tsx  SignupPage.tsx
client/src/services/: authApi.ts  chatApi.ts
client/src/store/: authSlice.ts  themeSlice.ts
