[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for CodeSmithAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie==2.1.0",
    "bcrypt==5.0.0",
    "email-validator==2.3.0",
    "fastapi==0.136.3",
    "langchain==1.3.2",
    "langchain-mongodb==0.11.0",
    "langchain-openai==1.2.2",
    "langgraph==1.2.2",
    "langgraph-checkpoint-mongodb==0.4.0",
    "mem0ai[nlp]==2.0.4",
    "openai==2.38.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyjwt==2.13.0",
    "pymongo==4.16.0",
    "python-dotenv==1.2.2",
    "qdrant-client==1.18.0",
    "uvicorn[standard]==0.48.0",
    "fastembed>=0.8.0",
]
